--- a/LineUI.css
+++ b/LineUI.css
@@ -4,12 +4,14 @@
   --theme-color: #007bff;
   --font-color: #333;
 
-  --gray-1: #f6f6f6;
-  --gray-2: #e5e5e5;
-  --gray-3: #d4d4d4;
-  --gray-4: #c2c2c2;
-  --gray-5: #b6b6b6;
-  --gray-6: #a1a1a1;
+  --gray-1: #fff;
+  --gray-2: #f6f6f6;
+  --gray-3: #e9e9e9;
+  --gray-4: #d4d4d4;
+  --gray-5: #c2c2c2;
+  --gray-6: #b6b6b6;
+  --gray-7: #a1a1a1;
+  --gray-8: #979797;
 
   --background-color: #f6f6f6;
 
@@ -51,7 +53,7 @@ button {
 }
 
 button:not(:disabled):hover {
-  box-shadow: inset 0 0 0 99em rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 0 0 99em rgba(120, 120, 120, 0.2);
 }
 
 button:focus {
@@ -65,16 +67,16 @@ button:disabled {
 }
 
 input, textarea {
-  border: 1px solid var(--gray-5);
+  border: 1px solid var(--gray-6);
   outline: none;
-  background: none;
+  background-color: transparent;
   padding: 8px;
   resize: vertical;
 }
 
 input[type="search"] {
   padding: 8px;
-  background-color: var(--gray-1);
+  /* background-color: var(--gray-1); */
 }
 
 input:focus,
@@ -216,7 +218,7 @@ a {
   position: absolute;
   transition: transform 0.2s ease-out, color 0.2s ease-out,
     -webkit-transform 0.2s ease-out;
-  color: var(--gray-5);
+  color: var(--gray-8);
   cursor: text;
   transform-origin: top left;
   top: 15px;
@@ -237,7 +239,7 @@ a {
 }
 
 .form-filled {
-  color: var(--gray-5) !important;
+  color: var(--gray-8) !important;
 }
 
 /* 折叠层 */
@@ -252,12 +254,11 @@ a {
   cursor: pointer;
   background-color: var(--gray-1);
   border-top: 1px solid var(--gray-3);
-  border-bottom: 1px solid var(--gray-3);
 }
 
 .collapse-item main {
   padding: 1rem;
-  background-color: var(--gray-2);
+  background-color: var(--gray-3);
 }
 
 .hidden {
@@ -359,7 +360,7 @@ a {
   flex-wrap: wrap;
 }
 
-.gap {
+.gap-10 {
   gap: 10px;
 }
 
@@ -374,14 +375,12 @@ a {
     --gray-4: #454545;
     --gray-5: #575757;
     --gray-6: #656565;
+    --gray-7: #757574;
+    --gray-8: #878787;
 
     --background-color: #1d2021;
 
     --navigator-color: #181a1b;
-
-    .light-button:hover {
-      background-color: var(--dark-light-button-color);
-    }
   }
 }
 
